--- a/_layout/default.html
+++ b/_layout/default.html
@@ -1,3 +1,4 @@
+<meta name="google-site-verification" content="lC7Zy4KFx2sawLyHkoVD581bcWWC3FdJ9C01b__m_J8" />
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 
