--- a/_layout/default.html
+++ b/_layout/default.html
@@ -10,7 +10,8 @@
 
 {% seo %}
   </head>
-
+    <meta name="google-site-verification" content="lC7Zy4KFx2sawLyHkoVD581bcWWC3FdJ9C01b__m_J8" />
+  
   <body>
 
     <!-- HEADER -->
